src/test/deca/context/invalid/with-object/wrong_type_return2.deca
class A{
    boolean f(){
        return 1;
    }
}